[package]
name = "cueball-postgres-connection"
version = "0.1.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]
edition = "2018"

[dependencies]
cueball = { git = "https://github.com/joyent/rust-cueball" }
postgres = "0.16.0-rc.1"

[dev-dependencies]
cueball-static-resolver = { git = "https://github.com/joyent/cueball-static-resolver" }
slog = "2.4.1"
slog-term = "2.4.0"