[package]
name = "cueball-postgres-connection"
version = "0.3.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]
edition = "2018"

[dependencies]
cueball = { git = 'https://github.com/joyent/rust-cueball', tag = "v0.3.0" }
native-tls = "0.2.3"
postgres = "0.16.0-rc.1"
serde = "1.0.84"
serde_derive = "1.0.84"
tokio-postgres-native-tls = "0.1.0-rc.1"
unicode-normalization = "=0.1.5"

[dev-dependencies]
cueball-static-resolver = { git = "https://github.com/joyent/cueball-static-resolver", tag = "v0.3.0" }
slog = "2.4.1"
slog-term = "2.4.0"
